# Deep-Learning-with-PyTorch-HuggingFace

./: .gitignore  README.md  pyproject.toml
llm-evaluation/: README.md  automated_evaluation_using_llm_as_judge.ipynb
llm-finetuning/: README.md
llm-finetuning/RLHF/: rlhf-using-dpo-with-trl.ipynb
llm-finetuning/axolotl/: finetuning-Llama-3.2-1B-axolotl  finetuning_Llama_3.2_1B_axolotl.ipynb
llm-finetuning/unsloth/: Qwen3_14B-Finetuning.ipynb
llm-finetuning/🤗 PEFT/: mistral_finetuning_QLoRA.ipynb
synthetic-data-generation/: distilabel.ipynb  distilabel.py  synthetic_data_generation.ipynb
transformers_from_scratch/: README.md  model.ipynb
